--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,11 @@
 		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
+		// "resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "bundler"
+		// "moduleResolution": "bundler"
 	}
 	
 
